# toon-tuna

./: .gitignore  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py  cli_examples.sh
src/: lib.rs
tests/: __init__.py  test_encode_decode.py  test_optimal_selection.py
