[package]
name = "toon-tuna"
version = "0.1.0"
edition = "2021"
authors = ["Toon Tuna Contributors"]
description = "Smart TOON/JSON optimizer for LLMs with high-performance Rust implementation"
license = "MIT"
repository = "https://github.com/olsihoxha/toon-tuna"

[lib]
name = "toon_tuna"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
pythonize = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
